<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-FileCopyrightText: 2026 The VoltageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Gallery</string>

    <!-- Toast messages -->
    <string name="app_permissions_toast">Permissions not granted by the user.</string>

    <!-- Titles -->
    <string name="reels_title">Reels</string>
    <string name="albums_title">Albums</string>
    <string name="categories_title">Categories</string>
    <string name="library_title">Library</string>

    <!-- Album buckets -->
    <string name="album_favorites">Favorites</string>
    <string name="album_trash">Trash</string>
    <string name="album_reels">Reels</string>
    <string name="album_photos">Photos</string>
    <string name="album_videos">Videos</string>

    <!-- Album thumbnail -->
    <plurals name="album_thumbnail_items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <!-- File deletion -->
    <plurals name="delete_file_forever_confirm_message">
        <item quantity="one">Are you sure you want to permanently delete this file?</item>
        <item quantity="other">Are you sure you want to permanently delete %d files?</item>
    </plurals>
    <plurals name="delete_file_forever_successful">
        <item quantity="one">File permanently deleted</item>
        <item quantity="other">%d files permanently deleted</item>
    </plurals>
    <plurals name="delete_file_forever_unsuccessful">
        <item quantity="one">File couldn\'t be permanently deleted</item>
        <item quantity="other">%d files couldn\'t be permanently deleted</item>
    </plurals>

    <!-- File trashing -->
    <plurals name="move_file_to_trash_confirm_message">
        <item quantity="one">Are you sure you want to move one file to trash?</item>
        <item quantity="other">Are you sure you want to move %d files to trash?</item>
    </plurals>
    <plurals name="move_file_to_trash_successful">
        <item quantity="one">File moved to trash</item>
        <item quantity="other">%d files moved to trash</item>
    </plurals>
    <plurals name="move_file_to_trash_unsuccessful">
        <item quantity="one">File couldn\'t be moved to trash</item>
        <item quantity="other">%d files couldn\'t be moved to trash</item>
    </plurals>

    <!-- File restoring from trash -->
    <plurals name="restore_file_from_trash_confirm_message">
        <item quantity="one">Are you sure you want to restore one file from trash?</item>
        <item quantity="other">Are you sure you want to restore %d files from trash?</item>
    </plurals>
    <plurals name="restore_file_from_trash_successful">
        <item quantity="one">File restored from trash</item>
        <item quantity="other">%d files restored from trash</item>
    </plurals>
    <plurals name="restore_file_from_trash_unsuccessful">
        <item quantity="one">File couldn\'t be restored from trash</item>
        <item quantity="other">%d files couldn\'t be restored from trash</item>
    </plurals>

    <!-- Manage media permission -->
    <string name="manage_media_permission_title">Manage media permission</string>
    <string name="manage_media_permission_message">To better manage your images and videos, allow the app to manage your media files</string>

    <!-- Media info bottom sheet dialog -->
    <string name="media_info_unknown">Unknown</string>
    <string name="media_info_add_description_hint">Add a description</string>
    <string name="media_info_write_description_failed">Failed to change media description</string>
    <string name="media_info_location_loading_placeholder">Loading…</string>
    <string name="media_info_location_open_with">View the location with</string>

    <!-- Intents handling -->
    <string name="intent_action_not_supported">Action not supported</string>
    <string name="intent_media_not_found">Media not found</string>
    <string name="intent_media_type_not_found">Media type not found</string>
    <string name="intent_media_type_not_supported">Media type not supported</string>
    <string name="intent_no_system_wallpaper_cropper_available">No system cropper available</string>
    <string name="intent_wallpaper_cannot_be_changed">Wallpaper can\'t be changed</string>

    <!-- Editor -->
    <string name="editor_crop">Crop</string>
    <string name="editor_default_font">Default</string>
    <string name="editor_discard_dialog_message">Your edits will be lost.</string>
    <string name="editor_discard_dialog_title">Discard edits?</string>
    <string name="editor_eraser">Eraser</string>
    <string name="editor_eraser_size_decrease">Decrease eraser size</string>
    <string name="editor_eraser_size_increase">Increase eraser size</string>
    <string name="editor_flip">Flip</string>
    <string name="editor_font">Font</string>
    <string name="editor_highlighter">Highlighter</string>
    <string name="editor_move">Move</string>
    <string name="editor_pen">Pen</string>
    <string name="editor_redo">Redo</string>
    <string name="editor_reset">Reset</string>
    <string name="editor_rotate">Rotate</string>
    <string name="editor_save">Save</string>
    <string name="editor_save_copy">Save copy</string>
    <string name="editor_save_failed">Couldn\'t save the edited image</string>
    <string name="editor_text">Text</string>
    <string name="editor_text_done">Done</string>
    <string name="editor_text_rotate">Rotate text</string>
    <string name="editor_text_size_decrease">Decrease text size</string>
    <string name="editor_text_size_increase">Increase text size</string>
    <string name="editor_undo">Undo</string>

    <!-- File actions -->
    <string name="file_action_add_to_favorites">Add to favorites</string>
    <string name="file_action_delete_forever">Delete forever</string>
    <string name="file_action_edit">Edit</string>
    <string name="file_action_empty_trash">Empty trash</string>
    <string name="file_action_information">Information</string>
    <string name="file_action_move_to_trash">Move to trash</string>
    <string name="file_action_remove_from_favorites">Remove from favorites</string>
    <string name="file_action_restore_from_trash">Restore from trash</string>
    <string name="file_action_share">Share</string>
    <string name="file_action_use_as">Use as</string>

    <!-- File actions - undo -->
    <string name="file_action_undo_action">Undo</string>

    <!-- No media -->
    <string name="no_media">No media</string>

    <!-- Selection -->
    <plurals name="thumbnail_selection_count">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>

    <!-- Picker -->
    <string name="pick_a_photo">Pick a photo</string>
    <string name="pick_a_video">Pick a video</string>
    <string name="pick_a_media">Pick a media</string>
    <string name="picker_done">Done</string>

    <!-- Wallpaper -->
    <string name="set_wallpaper_label">Wallpaper</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="set_wallpaper_dialog_title">Set wallpaper on</string>
    <string name="set_wallpaper_home_screen">Home screen</string>
    <string name="set_wallpaper_lock_screen">Lock screen</string>
    <string name="set_wallpaper_both">Home and lock screen</string>

    <!-- Warnings and information -->
    <string name="warning_bin_time_period">Files will be permanently deleted after 30 days.</string>

    <!-- Motion Photo -->
    <string name="motion_photo_show_video">Show video</string>
    <string name="motion_photo_show_photo">Show photo</string>

    <!-- Settings title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference titles -->
    <string name="general_header">General</string>
    <string name="video_header">Video</string>

    <!-- General preferences -->
    <string name="edge_tap_navigation_enable_title">Edge tap navigation</string>
    <string name="edge_tap_navigation_enabled_description">Tap left or right edge of screen to navigate between media</string>

    <!-- Video preferences -->
    <string name="double_tap_to_seek_enabled_title">Enable double-tap to seek</string>
    <string name="double_tap_to_seek_enabled_description">Double-tap the left or right side of the video to skip backward or forward</string>
    <string name="double_tap_to_seek_seconds_title">Double-tap to seek skip duration</string>
    <string name="double_tap_to_seek_seconds_description">Seconds to skip when double-tapping the video</string>
    <string name="hide_native_seek_buttons_title">Hide native seek buttons</string>
    <string name="hide_native_seek_buttons_description">Hide rewind and fast-forward buttons from the video player controls</string>
    <string name="remember_video_playback_position_enabled_title">Remember playback position</string>
    <string name="remember_video_playback_position_enabled_description">Resume videos from the last stopped position</string>
</resources>
